maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:56: error: not found: value False
      return False
             ^PledgeMaze:58: error: not found: value True
    return True
           ^